--- a/super_clones/gemini/pubspec.yaml
+++ b/super_clones/gemini/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   super_editor:
     path: ../../super_editor/
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_lints: ^5.0.0
