--- a/super_clones/quill/pubspec.yaml
+++ b/super_clones/quill/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   super_editor: any
   super_editor_quill: any
-  super_editor_markdown: any
+  super_text_layout: any
   collection: ^1.18.0
   overlord: ^0.4.2
   material_symbols_icons: ^4.2762.0
@@ -26,8 +26,6 @@ dependency_overrides:
     path: ../../super_editor
   super_editor_quill:
     path: ../../super_editor_quill
-  super_editor_markdown:
-    path: ../../super_editor_markdown
   super_text_layout:
     path: ../../super_text_layout
   attributed_text:
