--- a/super_editor_quill/pubspec.yaml
+++ b/super_editor_quill/pubspec.yaml
@@ -20,13 +20,13 @@ dependencies:
   matcher: ^0.12.16+1
   text_table: ^4.0.3
 
-dependency_overrides:
-  super_editor:
-    path: ../super_editor
+#dependency_overrides:
+#  super_editor:
+#    path: ../super_editor
 #  super_text_layout:
 #    path: ../super_text_layout
-  attributed_text:
-    path: ../attributed_text
+#  attributed_text:
+#    path: ../attributed_text
 
 dev_dependencies:
   # Note: some testing dependencies are listed as regular dependencies
