--- a/super_editor_clipboard/pubspec.yaml
+++ b/super_editor_clipboard/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   html2md: ^1.3.2
   super_clipboard: ^0.9.1
-  super_editor: ^0.3.0-dev.46
+  super_editor: ^0.3.0-dev.47
 
 dependency_overrides:
   super_editor:
@@ -25,3 +25,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+flutter:
+  plugin:
+    platforms:
+      ios:
+        pluginClass: SuperEditorClipboardPlugin
