--- a/super_editor_clipboard/pubspec.yaml
+++ b/super_editor_clipboard/pubspec.yaml
@@ -11,15 +11,20 @@ dependencies:
   collection: ^1.19.1
   flutter:
     sdk: flutter
+  flutter_test_runners: ^0.0.4
   html2md: ^1.3.2
+  logging: ^1.3.0
   super_clipboard: ^0.9.1
   super_editor: ^0.3.0-dev.47
+  super_keyboard: ^0.3.1
 
 dependency_overrides:
   super_editor:
     path: ../super_editor
   super_editor_markdown:
     path: ../super_editor_markdown
+  super_keyboard:
+    path: ../super_keyboard
 
 dev_dependencies:
   flutter_test:
