--- a/super_editor_clipboard/pubspec.yaml
+++ b/super_editor_clipboard/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
   super_editor: ^0.3.0-dev.48
   super_keyboard: ^0.3.1
 
-#dependency_overrides:
-#  super_editor:
-#    path: ../super_editor
+dependency_overrides:
+ super_editor:
+   path: ../super_editor
 #  super_editor_markdown:
 #    path: ../super_editor_markdown
 #  super_keyboard:
