--- a/super_editor_markdown/pubspec.yaml
+++ b/super_editor_markdown/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
 #dependency_overrides:
 #  # Override to local mono-repo path so devs can test this repo
 #  # against changes that they're making to other mono-repo packages
-#  super_editor:
-#    path: ../super_editor
+ super_editor:
+   path: ../super_editor
 #  super_text_layout:
 #    path: ../super_text_layout
 #  attributed_text:
