--- a/super_editor_clipboard/pubspec.yaml
+++ b/super_editor_clipboard/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   super_text_layout: ^0.1.19
+  super_native_extensions: ^0.9.1
 
 flutter:
   plugin:
